@@ -1,3 +1,8 @@
+########### 2015-6-15 #################
+alter table django_admin_log change object_id object_id varchar(64) NOT NULL;
+ALTER TABLE django_admin_log ADD INDEX IDX_OB_CO_AC_US (OBJECT_ID,CONTENT_TYPE_ID,ACTION_TIME,USER_ID);
+ALTER TABLE django_admin_log ADD INDEX IDX_USER_ID_CONTENT_TYPE_ID (USER_ID,CONTENT_TYPE_ID,ACTION_TIME)
+
 ########### 2015-6-12 #################
 alter table xiaolumm_xiaolumama add column hasale tinyint(1) NOT NULL;
 alter table xiaolumm_xiaolumama add column charge_time datetime;
